Added specular and diffuse mapping to render light more realisticly on a wooden crate with steel surrounding.

--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -145,10 +145,10 @@
     <ClInclude Include="src\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shader\fragmentShader.glsl" />
+    <None Include="Shader\materialFragShader.glsl" />
     <None Include="shader\lightFragShader.glsl" />
     <None Include="shader\lightVertShader.glsl" />
-    <Text Include="Shader\vertexShader.glsl">
+    <Text Include="Shader\materialVertShader.glsl">
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
@@ -157,7 +157,10 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="C:\Users\fynnj\Downloads\container.jpg" />
-    <Image Include="Ressources\awesomeface.png" />
+    <Image Include="resources\textures\awesomeface.png" />
+    <Image Include="resources\textures\container.jpg" />
+    <Image Include="resources\textures\container2.png" />
+    <Image Include="resources\textures\container2_specular.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
