--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -161,6 +161,8 @@
     <Image Include="resources\textures\container.jpg" />
     <Image Include="resources\textures\container2.png" />
     <Image Include="resources\textures\container2_specular.png" />
+    <Image Include="resources\textures\lighting_maps_specular_color.png" />
+    <Image Include="resources\textures\matrix.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
