--- a/OpenGL.vcxproj.filters
+++ b/OpenGL.vcxproj.filters
@@ -64,5 +64,11 @@
     <Image Include="resources\textures\container2_specular.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="resources\textures\lighting_maps_specular_color.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="resources\textures\matrix.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
