--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -260,9 +260,11 @@
   <ItemGroup>
     <Image Include="C:\Users\fynnj\Downloads\container.jpg" />
     <Image Include="resources\textures\awesomeface.png" />
+    <Image Include="resources\textures\blending_transparent_window.png" />
     <Image Include="resources\textures\container.jpg" />
     <Image Include="resources\textures\container2.png" />
     <Image Include="resources\textures\container2_specular.png" />
+    <Image Include="resources\textures\grass.png" />
     <Image Include="resources\textures\lighting_maps_specular_color.png" />
     <Image Include="resources\textures\matrix.jpg" />
   </ItemGroup>
