--- a/OpenGL.vcxproj.filters
+++ b/OpenGL.vcxproj.filters
@@ -360,5 +360,11 @@
     <Image Include="resources\textures\matrix.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="resources\textures\blending_transparent_window.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="resources\textures\grass.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
