--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -242,6 +242,8 @@
     <None Include="dependencies\assimp\SmoothingGroups.inl" />
     <None Include="dependencies\assimp\vector2.inl" />
     <None Include="dependencies\assimp\vector3.inl" />
+    <None Include="Shader\bufferTestingFrag.glsl" />
+    <None Include="Shader\bufferTestingVert.glsl" />
     <None Include="Shader\depthTestingVert.glsl" />
     <None Include="Shader\depthTestingFrag.glsl" />
     <None Include="Shader\material\materialFragShader.glsl" />
@@ -267,6 +269,7 @@
     <Image Include="resources\textures\grass.png" />
     <Image Include="resources\textures\lighting_maps_specular_color.png" />
     <Image Include="resources\textures\matrix.jpg" />
+    <Image Include="resources\textures\metal.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
